# PyVDLib

./: README.md  calculate_format.py  format_specifier.txt  pyproject.toml  read_virtualdesktop_mmf.py  requirements.txt
src/PyVDLib/: PyVDLib.py  __init__.py
